fixed medium and small screen horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -13,10 +13,14 @@
     transition: width 0.3s;
 }
 
-body {
+/*body {
     min-height: 100vh;
     width: 100vw;
     overflow-x: hidden;
+}*/
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 .landing-container {
